Update Report (Beta 2).

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -9,13 +9,62 @@
 
 \pagestyle{plain}
 \begin{document}
+\linespread{1,5}
+% Первая страница (без номера)
+\thispagestyle{empty} % Убираем номер на первой странице
+\begin{titlepage}
+    \newpage
+    \begin{center}
+    {\bfseries Министерство образования и науки Российской Федерации \\
+    ВГУ}
+    \vspace{1cm}
 
-\begin{center}
-\textbf{Отчет \\
-    \textit{Волченко П.В., Смотрова К.В.} \\
-    1 курс магистратуры, 15 группа \\
-    Варианты L1.16 и [7, [6,25], 1, 1]}
-\end{center}
+     Кафедра Технологий обработки и защиты информации
+     \vspace{2em}
+
+     \end{center}
+
+    \vspace{5em}
+
+    \begin{center}
+    \Large
+\textbf{Задание по дисциплине}
+
+\normalsize
+\textbf{«Математические Методы в Современных Информационных Технологиях»}
+
+(1 курс магистратуры ИСиТ, СПИИ, 2024-2025 уч. год.)
+
+Лобода А.В., Каверина В.К.
+     \end{center}
+    \vspace{5em}
+
+
+   \vbox{%
+\hfill%
+\vbox{%
+\hbox{\textbf{Выполнили:} магистранты 1 курса}%
+\hbox{направления «Информационные системы и технологии»}%
+\hbox{профиля «Системы прикладного искусственного интеллекта»}%
+\hbox{группы 15}%
+\hbox{Волченко Полина Владимировна}%
+\hbox{Смотрова Кристина Владимировна}%
+\hbox{}%
+}%
+} 
+
+    \begin{center}
+    \vspace{5em}
+    2024
+    \end{center}
+
+    \end{titlepage}
+\newpage
+
+% Добавляем содержание
+\tableofcontents
+\newpage
+\section{Алгебра L1.16}
 
 \begin{table}[h!]
     \centering
@@ -43,9 +92,60 @@
     \caption{Матрица коммутаторов полей}
 \end{table}
 
-Проверим равенство Якоби для всех сочетаний векторов. Оно выполняется, значит, представленный вариант является алгеброй. Найдем 4 базисных вектора, которые образуют абелеву подалгебру, и перейдем к рассмотрению 3 возможных случаев. \\
+Проверим равенство Якоби для всех сочетаний векторов. Оно выполняется, значит, представленный вариант является алгеброй. 
 
-\textbf{1 базис}
+Для проверки возьмем комбинацию \(e_1, e_2\) и \(e_3:\) \\
+
+$$[[e_1, e_2], e_3] + [[e_3, e_1], e_2] + [[e_2, e_3], e_1] = 0$ \\
+
+1)
+\[
+ [[e_1, e_2], e_6]: \\
+\]
+\[
+[e_1, e_2] = e_3 
+\]
+\[
+[e_3, e_3] = 0 
+\] \\
+
+2)
+\[
+[[e_3, e_1], e_2]: \\
+\]
+\[
+[e_3, e_1] = 0 
+\]
+\[
+[0, e_2] = 0 
+\] \\
+
+3) 
+\[
+[[e_2, e_3], e_1]: \\
+\]
+\[
+[e_2, e_3] = 0 
+\]
+\[
+[0, e_1] = 0 
+\]
+
+\[
+0 + 0 + 0 = 0
+\]
+
+В следствии чего можем сделать вывод, что Тождеcтво Якоби выполняется. \\
+
+\\
+Дальнейшие проверки, оставшихся 34-х комбинаций, были сделаны с помощью программы на языке Python.
+\\
+
+В результате было получено, что все комбинации удовлетворяют условию Якоби.
+
+Найдем 4 базисных вектора, которые образуют абелеву подалгебру, и перейдем к рассмотрению 3 возможных случаев. \\
+
+\subsection{Первый базис}
 \begin{align*}
 e_2 &= (1,0,0,0) = \frac{\partial}{\partial z_1}, \\
 e_3 &= (0,1,0,0) = \frac{\partial}{\partial z_2}, \\
@@ -263,7 +363,7 @@ C_1 = C_1 + 1;
 \]
 Получили \textbf{противоречие}. \\
 
-\textbf{2 базис} 
+\subsection{Второй базис} 
 \begin{align*}
 e_2 &= (0,b_2(z_1),c_2(z_1),d_2(z_1)), \\
 e_3 &= (0,1,0,0) = \frac{\partial}{\partial z_2}, \\
@@ -271,169 +371,66 @@ e_4 &= (0,0,1,0) = \frac{\partial}{\partial z_3}, \\
 e_5 &= (0,0,0,1) = \frac{\partial}{\partial z_4}. 
 \end{align*}
 
-Вычислим в этом случае $e_2$:
-$$e_2 = (a_2(z_1,z_2,z_3,z_4), b_2(z_1,z_2,z_3,z_4), c_2(z_1,z_2,z_3,z_4), d_2(z_1,z_2,z_3,z_4)).$$
+Для нахождения остальных полей (\( e_1, e_6, e_7 \)), рассмотрим коммутаторы между ними и полями из абелевой подалгебры, а также между собой. \\
 
-Так как $[e_3,e_2] = 0, [e_4,e_2] = 0, [e_5,e_2] = 0$, можно сделать вывод, что $e_2$ не зависит от $z_2, z_3 \text{ и } z_4$, тогда: 
-$$e_2 = (a_2(z_1), b_2(z_1), c_2(z_1), d_2(z_1)).$$ 
-\begin{align*}
-[e_1,e_2] &= e_1(e_2) - e_2(e_1) = \\
-&= 0 \cdot \left(
-\frac{\partial a_2(z_1)}{\partial z_1}, 
-\frac{\partial b_2(z_1)}{\partial z_1}, 
-\frac{\partial c_2(z_1)}{\partial z_1},
-\frac{\partial d_2(z_1)}{\partial z_1}
-\right) = (0,1,0,0);
-\end{align*}
-$$\Downarrow$$
+В результате чего мы получили такие поля:
+\[
+\boldsymbol{e_1 = \big( A_1e^{-z_1};\ B_1;\ -z_1 + C_1;\ D_1e^{(b - 1)z_1}\big);}
+\]
+\[
+\boldsymbol{e_2 = \big( 0; \frac{e^{z_1}}{A_1}; 0; 0\big);}
+\]
+\[
+\boldsymbol{e_3 = \big( 0; 1;\ 0;\ 0 \big);}
+\]
+\[
+\boldsymbol{e_4 = \big( 0; 0; 1; 0 \big);}
+\]
+\[
+\boldsymbol{e_5 = \big( 0; 0; 0; 1 \big);}
+\]
+\[
+\boldsymbol{e_6 = \big( 0;\ B_6;\ C_6;\ D_6 \big);}
+\]
+\[
+\boldsymbol{e_7 = \big( 1;\ z_2;\ z_3;\ bz_4 \big);}
+\]\\
+Как можно заметить, в данном случае получаем \textbf{вырождение}.
 
-0 = 1, получили противоречие. \\
+\subsection{Третий базис} 
+Для нахождения остальных полей (\( e_1, e_6, e_7 \)), рассмотрим коммутаторы между ними и полями из абелевой подалгебры, а также между собой. \\
 
-\textbf{3 базис} 
-\begin{align*}
-e_2 &= (0,1,0,0) = \frac{\partial}{\partial z_2}, \\
-e_3 &= (0,0,c_3(z_1),d_3(z_1)), \\
-e_4 &= (0,0,1,0) = \frac{\partial}{\partial z_3}, \\
-e_5 &= (0,0,0,1) = \frac{\partial}{\partial z_4}. 
-\end{align*}
+В результате получаем следующие поля:\\
 
-Вычислим в этом случае $e_2$:
-$$e_2 = (a_2(z_1,z_2,z_3,z_4), b_2(z_1,z_2,z_3,z_4), c_2(z_1,z_2,z_3,z_4), d_2(z_1,z_2,z_3,z_4)).$$
+\[
+\boldsymbol{e_1 = \big( 0;\ B_1e^{z_1};\ C_1;\  -D_3e^{(a - 1)z_1}z_2 + D_1e^{-az_1}\big);}
+\]
+\[
+\boldsymbol{e_2 = \big( 0; 1; 0; 0\big);}
+\]
+\[
+\boldsymbol{e_3 = \big( 0; 0;\ 0;\ D_3e^{(a - 1)z_1} \big);}
+\]
+\[
+\boldsymbol{e_4 = \big( 0; 0; 1; 0 \big);}
+\]
+\[
+\boldsymbol{e_5 = \big( 0; 0; 0; 1 \big);}
+\]
+\[
+\boldsymbol{e_6 = \big( 1;\ z_2;\ 0;\ az_4 \big);}
+\]
+\[
+\boldsymbol{e_7 = \big( A_7;\ B_7e^{z_1};\ C_7;\ bz_4 + D_7e^{az_1} \big);}
+\]
 
-Так как $[e_4,e_2] = 0 \text{ и } [e_5,e_2] = 0$, можно сделать вывод, что $e_2$ не зависит от $z_3 \text{ и } z_4$, тогда: 
-$$e_2 = (a_2(z_1, z_2), b_2(z_1, z_2), c_2(z_1, z_2), d_2(z_1, z_2)).$$ 
-\begin{align*}
-[e_1,e_2] &= e_1(e_2) - e_2(e_1) = \\
-&= \left(
-\frac{\partial a_2(z_1,z_2)}{\partial z_2}, 
-\frac{\partial b_2(z_1,z_2)}{\partial z_2}, 
-\frac{\partial c_2(z_1,z_2)}{\partial z_2}, 
-\frac{\partial d_2(z_1,z_2)}{\partial z_2}
-\right) = (0,0,c_3(z_1),d_3(z_1));
-\end{align*}
-$$\Downarrow$$
-$$e_2 = (a_2(z_1), b_2(z_1), c_3(z_1) \cdot z_2 + c_2(z_1), d_3(z_1) \cdot z_2 + d_2(z_1)).$$ 
-\begin{align*}
-[e_3,e_2] = e_3(e_2) - e_2(e_3) = -a_2(z_1)\left(0, 0, \frac{\partial c_3(z_1)}{\partial z_1}, \frac{\partial d_3(z_1)}{\partial z_1}\right) = 0;&
-\end{align*}
-$$\Downarrow$$
-$$
-\begin{dcases}
-\frac{\partial c_3(z_1)}{\partial z_1} = 0, \\
-\frac{\partial d_3(z_1)}{\partial z_1} = 0;
-\end{dcases} \quad \text{или} \quad a_2(z_1) = 0.$$
+Как можно заметить, в данном случае также получаем \textbf{вырождение}.
+\pagebreak
 
-Рассмотрим \textbf{первый случай}, где  
-$\begin{cases}
-\frac{\partial c_3(z_1)}{\partial z_1} = 0,\\
-\frac{\partial d_3(z_1)}{\partial z_1} = 0;
-\end{cases}$, тогда:
-\begin{align*}
-e_3 &= (0,0,C_3,D_3); \\
-e_2 &= (a_2(z_1), b_2(z_1), C_3 \cdot z_2 + c_2(z_1), D_3 \cdot z_2 + d_2(z_1));
-\end{align*}
-
-По аналогии вычислим $e_6$: 
-$$e_6 = (a_6(z_1), b_6(z_1), c_6(z_1), z_4 + d_6(z_1)).$$
-
-Вычислим $e_7$:
-$$e_7 = (a_7(z_1,z_2,z_3,z_4), b_7(z_1,z_2,z_3,z_4), c_7(z_1,z_2,z_3,z_4), d_7(z_1,z_2,z_3,z_4)).$$
-
-Так как $[e_4,e_7] = 0 \text{ и } [e_5,e_7] = 0$, можно сделать вывод, что $e_7$ не зависит от $z_3 \text{ и } z_4$, тогда: 
-$$e_7 = (a_7(z_1,z_2), b_7(z_1,z_2), c_7(z_1,z_2), d_7(z_1,z_2)).$$ 
-\begin{align*}
-[e_1,e_7] &= e_1(e_7) - e_7(e_1) = \\
-&= \left(
-\frac{\partial a_7(z_1,z_2)}{\partial z_2}, 
-\frac{\partial b_7(z_1,z_2)}{\partial z_2}, 
-\frac{\partial c_7(z_1,z_2)}{\partial z_2}, 
-\frac{\partial d_7(z_1,z_2)}{\partial z_2}\right) = (0, 0, 1, 0);
-\end{align*}
-$$\Downarrow$$
-$$e_7 = (a_7(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)).$$ 
-
-$$[e_3,e_7] = e_3(e_7) - e_7(e_3) = 0 = (0,0,C_3,D_3); \Rightarrow C_3 = 0, D_3 = 0; \Rightarrow e_3 = (0,0,0,0);$$
-$$\Downarrow$$
-
-Получаем противоречие, так как базисное поле не может быть нулевым. \\ 
-
-Рассмотрим \textbf{второй случай}, где $a_2(z_1) = 0$, тогда: 
-\begin{align*}
-e_3 &= (0,0,c_3(z_1),d_3(z_1)); \\
-e_2 &= (0, b_2(z_1), c_3(z_1) \cdot z_2 + c_2(z_1), d_3(z_1) \cdot z_2 + d_2(z_1));
-\end{align*}
-
-Вычислим в этом случае $e_6$:
-$$e_6 = (a_6(z_1,z_2,z_3,z_4), b_6(z_1,z_2,z_3,z_4), c_6(z_1,z_2,z_3,z_4), d_6(z_1,z_2,z_3,z_4)).$$
-
-Так как $[e_4,e_6] = 0 \text{ и } [e_5,e_6] = 0$, можно сделать вывод, что $e_6$ не зависит от $z_3 \text{ и } z_4$, тогда: 
-$$e_6 = (a_6(z_1,z_4), b_6(z_1,z_4), c_6(z_1,z_4), d_6(z_1,z_4)).$$ 
-\begin{align*}
-[e_5,e_6] &= e_5(e_6) - e_6(e_5) = \\
-&= \left(
-\frac{\partial a_6(z_1,z_4)}{\partial z_4}, 
-\frac{\partial b_6(z_1,z_4)}{\partial z_4}, 
-\frac{\partial c_6(z_1,z_4)}{\partial z_4}, 
-\frac{\partial d_6(z_1,z_4)}{\partial z_4}\right) = (0, 0, 0, 1);
-\end{align*}
-$$\Downarrow$$
-$$e_6 = (a_6(z_1), b_6(z_1), c_6(z_1), z_4 + d_6(z_1)).$$
-
-\begin{align*}
-[e_3,e_6] &= e_3(e_6) - e_6(e_3) = \\
-&= d_3(z_1)(0, 0, 0, 1) - a_6(z_1)\left(0,0,\frac{\partial c_3(z_1)}{\partial z_1}, \frac{\partial d_3(z_1)}{\partial z_1}\right) = 0;
-\end{align*}
-$$\Downarrow$$
-$$a_6(z_1) = 0 \quad \text{или} \quad \frac{\partial c_3(z_1)}{\partial z_1} = 0;$$
-
-Первый случай приводит к вырождению, так как $A_1 = A_2 = A_3 = A_4 = A_5 = A_6 = 0$ (получаем 6 нулей). Рассмотрим \textbf{второй случай}, где $\frac{\partial c_3(z_1)}{\partial z_1} = 0 \text{ и } \, a_6(z_1) \neq 0$. Так как $a_6(z_1) \neq 0$, воспользуемся леммой о линеаризации:
-$$\Downarrow$$
-\begin{align*}
-\frac{\partial d_3(z_1)}{\partial z_1} &= \frac{d_3(z_1)}{a_6(z_1)}; \\
-e_3 &= (0,0,C_3,d_3(z_1)); \\
-e_6 &= (a_6(z_1), b_6(z_1), c_6(z_1), z_4 + d_6(z_1)) = (1, 0, 0, z_4); \\ 
-e_2 &= (0, b_2(z_1), C_3 \cdot z_2 + c_2(z_1), d_3(z_1) \cdot z_2 + d_2(z_1)). 
-\end{align*}
-
-По аналогии вычислим $e_7$:
-$$e_7 = (a_7(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)) = (-a_6(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)).$$ 
-
-Таким образом, получаем:
-\begin{align*}
-a_6&(z_1) = -a_7(z_1) \neq 0, \\
-e_2 &= (0, b_2(z_1), c_2(z_1), d_3(z_1) \cdot z_2 + d_2(z_1)), \\
-e_6 &= (1, 0, 0, z_4), \\
-e_7 &= (-a_6(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)). 
-\end{align*}
-
-Проверим тождества $[e_2,e_6] = 0, [e_2,e_7] = e_2, \text{ и } [e_6,e_7] = e_4.$ 
-\begin{align*}
-1) \,
-[e_2,e_6] &= e_2(e_6) - e_6(e_2) = \\
-&= (d_3(z_1) \cdot z_2 + d_2(z_1)) \cdot \left(0, 0, 0, \frac{\partial z_4}{\partial z_4}\right) - \\
-&- 1 \cdot \left(0, \frac{\partial b_2(z_1)}{\partial z_1}, \frac{\partial c_2(z_1)}{\partial z_1}, \frac{\partial (d_3(z_1) \cdot z_2 + d_2(z_1))}{\partial z_1}\right) = 0;
-\end{align*}
-$$\Downarrow$$
-\begin{align*}
-e_2 &= (0, B_2, C_2, d_3(z_1) \cdot z_2 + d_2(z_1)); \\ 
-e_6 &= (1, 0, 0, z_4); \\ 
-e_7 &= (-a_6(z_1), b_7(z_1), z_2 + c_7(z_1), d_7(z_1)). 
-\end{align*}
-\begin{align*}
-2) \,
-[e_2,e_7] &= e_2(e_7) - e_7(e_2) = \\
-&= B_2 \cdot \left(0, 0, \frac{\partial z_2}{\partial z_2}, 0\right)
-+ a_6(z_1) \cdot \left(0, 0, 0, \frac{\partial (d_3(z_1) \cdot z_2 + d_2(z_1))}{\partial z_1}\right) -\\
-&- b_7(z_1) \cdot  (0,0,0,d_3(z_1)) = (0, B_2, C_2, d_3(z_1) \cdot z_2 + d_2(z_1));
-\end{align*}
-$$\Downarrow$$
-$$B_2 = C_2 = 0;$$
-$$b_7(z_1) = 0 \quad \text{или} \quad d_3(z_1) = 0;$$
-Первый случай приводит к вырождению, так как $B_2 = B_3 = B_4 = B_5 = B_6 = B_7 = 0$ (получаем 6 нулей), а второй — к противоречию (так как базисное поле не может быть нулевым).\\
-
-\begin{center}
-\textbf{Задание [7, [6,25], 1, 1]}
-\end{center}
+\subsection{Вывод по Алгебре L1.16}
+Алгебра Ли L1.16 из списка не допускает голоморфных реализаций в 4-мерном комплексном пространстве.
+\newpage
+\section{Задание [7, [6,25], 1, 1]}
 
 С точностью до локальных голоморфных преобразований реализация в $\mathbb{C}^4$ 7-мерной алгебры [7, [6,25], 1, 1], содержащей ниль-радикал $N_{[6,25]}$, обязана иметь следующий базис:
 
@@ -445,17 +442,17 @@ $$b_7(z_1) = 0 \quad \text{или} \quad d_3(z_1) = 0;$$
         \hline
     & $e_1$ & $e_2$ & $e_3$ & $e_4$ & $e_5$ & $e_6$ & $e_7$ \\
         \hline
-        $e_1$ & $\cdot$ & & & & & & $3e_1 + ae_2$\\
+        $e_1$ & $\cdot$ & & & & & & $3e_1 + me_2$\\
         \hline
-        $e_2$ & & $\cdot$ & & & & & $-ae_1+3e_2$\\
+        $e_2$ & & $\cdot$ & & & & & $-me_1+3e_2$\\
         \hline
         $e_3$ & & & $\cdot$ & & $e_2$ & $e_1$ & $2e_3$\\
         \hline
         $e_4$ & & & & $\cdot$ & $-e_1$ & $e_2$ & $2e_4$ \\
         \hline
-        $e_5$ & & & & & $\cdot$ & $e_4$ & $e_5-ae_6$ \\
+        $e_5$ & & & & & $\cdot$ & $e_4$ & $e_5-me_6$ \\
         \hline
-        $e_6$ & & & & & & $\cdot$ & $ae_5+ae_6$ \\
+        $e_6$ & & & & & & $\cdot$ & $me_5+e_6$ \\
         \hline
         $e_7$ & & & & & & & $\cdot$ \\
         \hline
@@ -463,10 +460,58 @@ $$b_7(z_1) = 0 \quad \text{или} \quad d_3(z_1) = 0;$$
     \caption{Матрица коммутаторов полей алгебры $T [7[6,25],1,1]$}
 \end{table}
 
-Проверим равенство Якоби для всех сочетаний векторов. Оно выпол-
-няется, значит, представленный вариант является алгеброй.\\
+Проверим равенство Якоби для всех сочетаний векторов. Оно выполняется, значит, представленный вариант является алгеброй. \\
 
-Полученные поля данной алгебры выглядят так:
+Для проверки возьмем комбинацию \(e_1, e_2\) и \(e_6:\) \\
+
+$[[e_1, e_2], e_6] + [[e_2, e_6], e_1] + [[e_6, e_1], e_2] = 0$ \\
+
+1)
+\[
+ [[e_1, e_2], e_6]: \\
+\]
+\[
+[e_1, e_2] = 0
+\]
+\[
+[0, e_6] = 0 
+\] \\
+
+2)
+\[
+[[e_2, e_6], e_1]: \\
+\]
+\[
+[e_2, e_6] = 0
+\]
+\[
+[0, e_6] = 0 
+\] \\
+
+3) 
+\[
+[[e_6, e_1], e_2]: \\
+\]
+\[
+[e_6, e_1] = 0 
+\]
+\[
+[0, e_2] = 0 
+\]
+
+Из полученных решений получаем следующий итог:
+\[
+0 + 0 + 0 = 0
+\]
+
+В следствии чего можем сделать вывод, что Тождество Якоби выполняется. \\
+\\
+Дальнейшие проверки оставшихся 34-х комбинаций были сделаны с помощью программы на языке Python.
+\\
+
+В результате было получено, что все комбинации удовлетворяют условию Якоби.\\
+
+Данные нам поля этой алгебры выглядят так:
 \begin{align*}
 e_1 &= (0,0,0,1), \\
 e_2 &= (0,0,1,0), \\
@@ -505,12 +550,10 @@ $[e6, e7] = \left(i \varepsilon + m, i \varepsilon z_1, \frac{3 z_1}{m} + i \var
 
 - V2_COMMUTATORS_M_IN_NUMERATOR.mw — в поле $e_7$ перенесли $m$ из знаменателя в числитель; \\
 
-- V3_COMMUTATORS_M_IN_NUMERATOR_AND_ZERO.mw — в поле $e_7$ перенесли $m$ из знаменателя в числитель и приравняли к 0; \\
+- V3_COMMUTATORS_M_IN_NUMERATOR_AND_ZERO.mw — в поле $e_7$ перенесли $m$ из знаменателя в числитель и приравняли к 0;
 
 \pagebreak
-\begin{center}
-\textbf{Список использованной литературы}
-\end{center}
+\section{Список использованной литературы}
 
 1. Крутских В. В., Лобода А. В. Компьютерные алгоритмы реализации 7-мерных алгебр Ли // Материалы Международной научно-технической конференции «Актуальные проблемы прикладной математики, информатики и механики». Воронеж: ПМИМ ВГУ, 2022.
 
