Update Report (Beta 3). Add V4 Maple

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -61,9 +61,6 @@
     \end{titlepage}
 \newpage
 
-% Добавляем содержание
-\tableofcontents
-\newpage
 \section{Алгебра L1.16}
 
 \begin{table}[h!]
@@ -92,22 +89,22 @@
     \caption{Матрица коммутаторов полей}
 \end{table}
 
-Проверим равенство Якоби для всех сочетаний векторов. Оно выполняется, значит, представленный вариант является алгеброй. 
+Проверим равенство Якоби для всех сочетаний векторов. \\
 
-Для проверки возьмем комбинацию \(e_1, e_2\) и \(e_3:\) \\
+Для проверки возьмем комбинацию \(e_1, e_2\) и \(e_3:\) 
 
-$$[[e_1, e_2], e_3] + [[e_3, e_1], e_2] + [[e_2, e_3], e_1] = 0$ \\
+$$[[e_1, e_2], e_3] + [[e_3, e_1], e_2] + [[e_2, e_3], e_1] = 0$ 
 
 1)
 \[
- [[e_1, e_2], e_6]: \\
+ [[e_1, e_2], e_3]: \\
 \]
 \[
 [e_1, e_2] = e_3 
 \]
 \[
 [e_3, e_3] = 0 
-\] \\
+\] 
 
 2)
 \[
@@ -118,7 +115,7 @@ $$[[e_1, e_2], e_3] + [[e_3, e_1], e_2] + [[e_2, e_3], e_1] = 0$ \\
 \]
 \[
 [0, e_2] = 0 
-\] \\
+\] 
 
 3) 
 \[
@@ -138,12 +135,8 @@ $$[[e_1, e_2], e_3] + [[e_3, e_1], e_2] + [[e_2, e_3], e_1] = 0$ \\
 В следствии чего можем сделать вывод, что Тождеcтво Якоби выполняется. \\
 
 \\
-Дальнейшие проверки, оставшихся 34-х комбинаций, были сделаны с помощью программы на языке Python.
+Оно выполняется, значит, представленный вариант является алгеброй. Найдем 4 базисных вектора, которые образуют абелеву подалгебру, и перейдем к рассмотрению 3 возможных случаев. 
 \\
-
-В результате было получено, что все комбинации удовлетворяют условию Якоби.
-
-Найдем 4 базисных вектора, которые образуют абелеву подалгебру, и перейдем к рассмотрению 3 возможных случаев. \\
 
 \subsection{Первый базис}
 \begin{align*}
@@ -361,19 +354,60 @@ C_1 = C_1 + 1;
 \[
 0 = 1;
 \]
-Получили \textbf{противоречие}. \\
+Получили \textbf{противоречие}. 
 
 \subsection{Второй базис} 
 \begin{align*}
 e_2 &= (0,b_2(z_1),c_2(z_1),d_2(z_1)), \\
-e_3 &= (0,1,0,0) = \frac{\partial}{\partial z_2}, \\
-e_4 &= (0,0,1,0) = \frac{\partial}{\partial z_3}, \\
-e_5 &= (0,0,0,1) = \frac{\partial}{\partial z_4}. 
+e_3 &= (0,1,0,0), \\
+e_4 &= (0,0,1,0), \\
+e_5 &= (0,0,0,1). 
 \end{align*}
 
-Для нахождения остальных полей (\( e_1, e_6, e_7 \)), рассмотрим коммутаторы между ними и полями из абелевой подалгебры, а также между собой. \\
+\textbf{Вычислим $e_1$:}
+$$e_1 = (a_1(z_1,z_2,z_3,z_4), b_1(z_1,z_2,z_3,z_4), c_1(z_1,z_2,z_3,z_4), d_1(z_1,z_2,z_3,z_4)).$$
 
-В результате чего мы получили такие поля:
+Так как $[e_1,e_3] = 0, [e_1,e_4] = 0, [e_1,e_5] = 0$, можно сделать вывод, что $e_1$ не зависит от $z_2, z_3 \text{ и } z_4$, тогда: 
+$$e_1 = (a_1(z_1), b_1(z_1), c_1(z_1), d_1(z_1)).$$ 
+
+Рассмотрим $[e_1,e_2] = e_3$ \\
+
+Отсюда мы получаем $\frac{\partial{c_2(z_1)}}{\partial{z_1}} = 0$, $\frac{\partial{d_2(z_1)}}{\partial{z_1}} = 0$ и $a_1(z_1) \cdot \frac{\partial{b_2(z_1)}}{\partial{z_1}} = 1$. \\
+
+Это означает, что $c_2(z_1) = C_2$, $d_2(z_1) = D_2$, а $a_1(z_1) \neq 0$. \\
+
+\textbf{Вычислим $e_7$:}
+$$e_7 = (a_7(z_1,z_2,z_3,z_4), b_7(z_1,z_2,z_3,z_4), c_7(z_1,z_2,z_3,z_4), d_7(z_1,z_2,z_3,z_4)).$$
+
+При рассмотрении коммутационных соотношений $[e_3, e_7], [e_4, e_7], [e_6, e_7]$ поле $e_7$ примет следующий вид: 
+$$e_7 = (a_7(z_1), z_2 + b_7(z_1), z_3 + c_7(z_1), bz_4 + d_7(z_1).$$ 
+
+Линеаризируем поле $e_7$: \\
+
+$e_7 = (1, z_2, z_3 + bz_4)$. \\
+
+Рассмотрим $[e_2,e_7] = 0.\\
+
+Отсюда мы получаем $b_2(z_1) = e^{z_1} \cdot B_2$.\\
+
+\textbf{Вычислим $e_6$:}
+$$e_6 = (a_6(z_1,z_2,z_3,z_4), b_6(z_1,z_2,z_3,z_4), c_6(z_1,z_2,z_3,z_4), d_6(z_1,z_2,z_3,z_4)).$$
+
+Так как $[e_4,e_6] = 0$, можно сделать вывод, что $e_6$ не зависит от $z_3$, тогда: 
+$$e_6 = (a_6(z_1,z_2,z_4), b_6(z_1,z_2,z_4), c_6(z_1,z_2,z_4), d_6(z_1,z_2,z_4)).$$ 
+
+Рассмотрим $[e_5,e_6] = a \cdot e_5 \text{ и } [e_3,e_6] = e_3.\\
+
+Отсюда мы получаем $\frac{\partial d_6 }{\partial z_4} = a \text{ и } \frac{\partial b_6 }{\partial z_2} = 1, \text{ а остальное = 0. } $\\
+
+Рассмотрим $[e_2, e_6] = e_2$. \\
+
+Отсюда мы получаем: $a_6(z_1) \cdot \frac{\partial{b_2(z_1)}}{\partial{z_1}} = 0$, $-a_6(z_1) \cdot \frac{\partial{c_2(z_1)}}{\partial{z_1}} = c_2(z_1)$ и $ad_2(z_1) - a_6(z_1) \cdot \frac{\partial{b_2(z_1)}}{\partial{z_1}} = d_2(z_1)$. \\
+
+Тогда $e_6$:
+$$e_6 = (a_6(z_1), b_6(z_1) + z_2, c_6(z_1), d_6(z_1) + az_4).$$
+
+После данных вычислений мы стали коммутировать поля $(e_1, e_6, e_7)$ между собой и получили такие поля:
 \[
 \boldsymbol{e_1 = \big( A_1e^{-z_1};\ B_1;\ -z_1 + C_1;\ D_1e^{(b - 1)z_1}\big);}
 \]
@@ -395,21 +429,102 @@ e_5 &= (0,0,0,1) = \frac{\partial}{\partial z_4}.
 \[
 \boldsymbol{e_7 = \big( 1;\ z_2;\ z_3;\ bz_4 \big);}
 \]\\
-Как можно заметить, в данном случае получаем \textbf{вырождение}.
+Обращая внимание на поля $(e_2, e_3)$ мы замечаем, что тут у нас \textbf{вырождение}.
 
 \subsection{Третий базис} 
-Для нахождения остальных полей (\( e_1, e_6, e_7 \)), рассмотрим коммутаторы между ними и полями из абелевой подалгебры, а также между собой. \\
+\begin{align*}
+e_2 &= (0,1,0,0), \\
+e_3 &= (0,0,c_3(z_1),d_3(z_1)), \\
+e_4 &= (0,0,1,0), \\
+e_5 &= (0,0,0,1). 
+\end{align*}
 
-В результате получаем следующие поля:\\
+\textbf{Вычислим $e_1$:}
+$$e_1 = (a_1(z_1,z_2,z_3,z_4), b_1(z_1,z_2,z_3,z_4), c_1(z_1,z_2,z_3,z_4), d_1(z_1,z_2,z_3,z_4)).$$
+
+Так как $[e_4,e_1] = 0, [e_5,e_1] = 0$, можно сделать вывод, что $e_1$ не зависит от $z_3 \text{ и } z_4$, тогда: 
+$$e_1 = (a_1(z_1,z_2), b_1(z_1,z_2), c_1(z_1,z_2), d_1(z_1,z_2)).$$ 
+
+Рассмотрим $[e_2,e_1] = -e_3$ \\
+
+Отсюда мы получаем $\frac{\partial a_1 }{\partial z_2} = 0 \text{ и } \frac{\partial b_1 }{\partial z_2} = 0 \text{ и } \frac{\partial c_1 }{\partial z_2} = -c_3(z_1) \text{ и } \frac{\partial d_1 }{\partial z_2} = -d_3(z_1)$\\
+
+Тогда $e_1$:
+$$e_1 = (a_1(z_1), b_1(z_1), -c_3(z_1) \cdot  z_2, -d_3(z_1)\cdot  z_2).$$
+
+Рассмотрим $[e_3,e_1] = 0$
+
+\begin{align*}
+[e_3,e_1] &= e_3(e_1) - e_1(e_3) = \\
+&= 0 - a_1(z_1) \cdot \left(
+\frac{\partial c_3}{\partial z_1} \cdot \frac{\partial}{\partial z_3}, 
+\frac{\partial c_3}{\partial z_1} \cdot \frac{\partial}{\partial z_4}
+\right) = 0;
+\end{align*}
+
+Если $a_1(z_1) = 0$,  \text{ то } $$e_1 = (0, b_1(z_1), -c_3(z_1) \cdot  z_2, -d_3(z_1)\cdot  z_2).$$
+
+Если $\left(
+\frac{\partial c_3}{\partial z_1} \cdot \frac{\partial}{\partial z_3}, 
+\frac{\partial c_3}{\partial z_1} \cdot \frac{\partial}{\partial z_4}
+\right) = 0$,  \text{ то } $$ \frac{\partial c_3(z_1)}{\partial z_1} = 0 => c_3(z_1)=C_3 \text{ и } \frac{\partial d_3(z_1)}{\partial z_1} = 0 => d_3(z_1)=D_3. \text{ Тогда } e_3 = (0, 0, C_3 , D_3). $$ 
+\\
+
+\textbf{Вычислим $e_7$:}
+$$e_7 = (a_7(z_1,z_2,z_3,z_4), b_7(z_1,z_2,z_3,z_4), c_7(z_1,z_2,z_3,z_4), d_7(z_1,z_2,z_3,z_4)).$$
+
+Так как $[e_2,e_7] = 0$, можно сделать вывод, что $e_7$ не зависит от $z_2$, тогда: 
+$$e_7 = (a_7(z_1,z_3,z_4), b_7(z_1,z_3,z_4), c_7(z_1,z_3,z_4), d_7(z_1,z_3,z_4)).$$ 
+
+Рассмотрим $[e_5,e_7] = b \cdot e_5 \text{ и } [e_4,e_7] = e_4.\\
+
+Отсюда мы получаем $\frac{\partial d_7 }{\partial z_4} = b \text{ и } \frac{\partial c_7 }{\partial z_3} = 1, \text{ а остальное = 0. } $\\
+
+Тогда $e_7$:
+$$e_7 = (a_7(z_1), b_7(z_1), c_7(z_1) + z_3, d_7(z_1) + b \cdot z_4).$$
+
+При рассмотрение $[e_3,e_7] = e_3$ получаем: 
+\begin{equation*}
+ \begin{cases}
+   $$a_7(z_1) \cdot \frac{\partial c_3(z_1) }{\partial z_1} = 0$$ \\
+   $$d_3(z_1) = b \cdot d_3(z_1) - a_7(z_1) \frac{\partial d_3(z_1) }{\partial z_1}$$
+ \end{cases}
+\end{equation*}
+
+Из $$a_7(z_1) \cdot \frac{\partial c_3(z_1) }{\partial z_1} = 0$$ следует, что $$a_7(z_1) = 0 => b = 1 \text{ или } \frac{\partial c_3(z_1) }{\partial z_1} = 0 => c_3(z_1)=C_3. \text{ Тогда } e_3 = (0, 0, C_3, d_3(z_1)). $$ 
+
+\textbf{Вычислим $e_6$:}
+$$e_6 = (a_6(z_1,z_2,z_3,z_4), b_6(z_1,z_2,z_3,z_4), c_6(z_1,z_2,z_3,z_4), d_6(z_1,z_2,z_3,z_4)).$$
+
+Так как $[e_4,e_6] = 0$, можно сделать вывод, что $e_6$ не зависит от $z_3$, тогда: 
+$$e_6 = (a_6(z_1,z_2,z_4), b_6(z_1,z_2,z_4), c_6(z_1,z_2,z_4), d_6(z_1,z_2,z_4)).$$ 
+
+Рассмотрим $[e_5,e_6] = a \cdot e_5 \text{ и } [e_2,e_6] = e_2.\\
+
+Отсюда мы получаем $\frac{\partial d_6 }{\partial z_4} = a \text{ и } \frac{\partial b_6 }{\partial z_2} = 1, \text{ а остальное = 0. } $\\
+
+Тогда $e_6$:
+$$e_6 = (a_6(z_1), b_6(z_1) + z_2, c_6(z_1), d_6(z_1) + a \cdot z_4).$$
+
+При рассмотрение $[e_3,e_6] = e_3$ получаем: 
+\begin{equation*}
+ \begin{cases}
+   $$c_3(z_1) + a_6(z_1) \cdot \frac{\partial c_3(z_1) }{\partial z_1} = 0$$ \\
+   $$d_3(z_1) + a_6(z_1) \cdot d_3(z_1) - a \cdot d_3(z_1)$$
+ \end{cases}
+\end{equation*}
+
+После данных вычислений мы стали коммутировать поля $(e_1, e_6, e_7)$ между собой и получили такие поля:
+
 
 \[
-\boldsymbol{e_1 = \big( 0;\ B_1e^{z_1};\ C_1;\  -D_3e^{(a - 1)z_1}z_2 + D_1e^{-az_1}\big);}
+\boldsymbol{e_1 = \big( 0;\ B_1 \cdot e^{z_1};\ C_1;\ -e^{(a-1)z_1}\cdot D_3 \cdot z_2 + e^{-az_1} \cdot D_1\big);}
 \]
 \[
 \boldsymbol{e_2 = \big( 0; 1; 0; 0\big);}
 \]
 \[
-\boldsymbol{e_3 = \big( 0; 0;\ 0;\ D_3e^{(a - 1)z_1} \big);}
+\boldsymbol{e_3 = \big( 0; 0;\ 0;\ D_3\cdot e^{(a-1)z_1} \big);}
 \]
 \[
 \boldsymbol{e_4 = \big( 0; 0; 1; 0 \big);}
@@ -418,18 +533,14 @@ e_5 &= (0,0,0,1) = \frac{\partial}{\partial z_4}.
 \boldsymbol{e_5 = \big( 0; 0; 0; 1 \big);}
 \]
 \[
-\boldsymbol{e_6 = \big( 1;\ z_2;\ 0;\ az_4 \big);}
+\boldsymbol{e_6 = \big( 1;\ z_2;\ 0;\ a \cdot z_4 \big);}
 \]
 \[
-\boldsymbol{e_7 = \big( A_7;\ B_7e^{z_1};\ C_7;\ bz_4 + D_7e^{az_1} \big);}
-\]
-
-Как можно заметить, в данном случае также получаем \textbf{вырождение}.
+\boldsymbol{e_7 = \big( A_7;\ B_7 \cdot e^{z_1};\ C_7;\ bz_4 + D_7 \cdot e^{az_1} \big);}
+\]\\
+Обращая внимание на поля $(e_3, e_5)$ мы замечаем, что тут у нас \textbf{вырождение}.
 \pagebreak
 
-\subsection{Вывод по Алгебре L1.16}
-Алгебра Ли L1.16 из списка не допускает голоморфных реализаций в 4-мерном комплексном пространстве.
-\newpage
 \section{Задание [7, [6,25], 1, 1]}
 
 С точностью до локальных голоморфных преобразований реализация в $\mathbb{C}^4$ 7-мерной алгебры [7, [6,25], 1, 1], содержащей ниль-радикал $N_{[6,25]}$, обязана иметь следующий базис:
@@ -505,11 +616,6 @@ $[[e_1, e_2], e_6] + [[e_2, e_6], e_1] + [[e_6, e_1], e_2] = 0$ \\
 \]
 
 В следствии чего можем сделать вывод, что Тождество Якоби выполняется. \\
-\\
-Дальнейшие проверки оставшихся 34-х комбинаций были сделаны с помощью программы на языке Python.
-\\
-
-В результате было получено, что все комбинации удовлетворяют условию Якоби.\\
 
 Данные нам поля этой алгебры выглядят так:
 \begin{align*}
